--- a/style.css
+++ b/style.css
@@ -2,15 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   color: var(--text-color);
+}
+
+::selection {
+  background-color: var(--text-color);
+  color: var(--background-dark);
 }
 
 :root {
   --text-color: #c7c7c7;
   --background-hover-dark: #4b4b4b;
   --background-hover-light: #fafafa;
-  --background-dark: #333;
+  --background-dark: #1A1A1A;
+  --black: #000000;
+  --white: #ffffff;
 }
 
 html {
@@ -62,7 +69,7 @@ body {
   font-weight: bold;
 }
 
-.get-in-touch a:hover {
+.get-in-touch a:hover, .socials a i:hover {
   color: var(--background-hover-light);
 }
 
@@ -79,10 +86,6 @@ body {
   font-size: 1.2rem;
 }
 
-.socials a:hover {
-  color: var(--background-hover-light);
-}
-
 main {
   max-width: 1250px;
   margin: auto;
@@ -94,9 +97,6 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  position: sticky;
-  top: 0;
-  z-index: -1;
 }
 
 .my-introduction .avatar {
@@ -121,6 +121,7 @@ main {
   margin: auto;
   text-align: justify;
   font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .follow-up-button {
@@ -130,47 +131,102 @@ main {
 }
 
 .follow-up-button a {
+  font-size: 0.9rem;
   text-decoration: none;
   background-color: var(--background-dark);
-  padding: 0.5rem 1.5rem;
-  outline: 0.5px solid var(--text-color);
+  padding: 0.5rem 1rem;
+  outline: 1px solid var(--text-color);
   border-radius: 0.15rem;
+  font-weight: bold;
 }
 
-.follow-up-button:hover {
-  transform: scale(0.95);
+.quote-section {
+  min-height: 10vh;
+  padding: 1rem 0rem;
 }
 
-.blogs-section {
-  z-index: 1;
-  min-height: 30vh;
+.quote-section h1 {
+  text-align: center;
   margin-bottom: 1rem;
-  background-color: rgba(0, 0, 0, 0.9);
-  display: flex;
-  gap: 2rem;
 }
 
-.blog {
+.quote {
+  width: 320px;
+  min-height: 150px;
+  border: 1px solid var(--background-hover-dark);
   background-color: var(--background-dark);
+  border-radius: 0.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
 }
 
-.blog-image {
-  height: 200px;
-  background-image: url('./assets/blogimage1.jpg');
-  background-size: cover;
-  background-color: black;
+.quotes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1250px;
+  margin: auto;
 }
 
-.blog .blog-description {
-  padding: 0.5rem 1.5rem;
+.my-skills-section {
+  margin-bottom: 3rem;
 }
 
-.blog .blog-heading {
-  font-size: 0.7rem;
+.my-skills-section h1 {
+  text-align: center;
+  padding-bottom: 2rem;
 }
 
-.blog .blog-short-description {
+.skills-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.skill {
+  background-color: var(--background-dark);
+  max-width: 300px;
+  height: 370px;
+  border: 0.2px solid var(--background-hover-dark);
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 0.1rem;
+}
+
+.icon-and-name {
+  display: flex;
+  align-items: center;
+}
+
+.icon-and-name i {
+  margin-right: 0.5rem;
+  font-size: 2rem;
+}
+
+.icon-and-name h2 {
+  font-size: 1.07rem;
+}
+
+.skill-description {
   text-align: justify;
+  max-width: 95%;
+}
+
+.read-more-button {
+  padding: 1rem 0rem;
+}
+
+.read-more-button a {
+  text-decoration: none;
+  background-color: var(--background-hover-dark);
+  padding: 0.5rem 1rem;
+  border-radius: 0.1rem;
+  font-weight: bold;
+  font-size: 0.85rem;
 }
 
 @media screen and (max-width: 500px) {
@@ -200,9 +256,22 @@ main {
     width: 90%;
     font-size: 0.7rem;
     font-weight: bold;
-    line-height: 1.7;
+    line-height: 1.6;
   }
-  .blogs-section {
+  .quote-section h1 {
+    font-size: 1rem;
+  }
+  .quotes {
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
+  }
+  .quote {
+    font-size: 0.7rem;
+  }
+  .skills-section {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
   }
 }
